projet 2/myingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: dyma-ingress-class
spec:
  controller: k8s.io/ingress-nginx
